<?xml version="1.0"?>
<package format="2">
  <name>eus_prioritized_inverse_kinematics</name>
  <version>0.0.0</version>
  <description>The eus_prioritized_inverse_kinematics package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eus_cddlib</depend>
  <depend>eus_osqp</depend>
  <depend>eus_qp</depend>
</package>
